<resources>
    <string name="app_name">Bookzz</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="books">Books</string>
    <string name="my_library">My Library</string>
    <string name="chat">Chat</string>
    <string name="friends">Friends</string>
    <string name="goal">Goal</string>
    <string name="schedule">Schedule</string>
    <string name="statistic">Statistic</string>
    <string name="logout">Logout</string>
    <string name="login">LOGIN</string>
    <string name="username">   Username</string>
    <string name="password">   Password</string>
    <string name="register">REGISTER</string>
    <string name="firts_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="add_to_read">Add to Read</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_your_comment">Add your comment</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="rating">Rating</string>
    <string name="read_pdf">Read PDF</string>
    <string name="quotes">Quotes</string>
</resources>