<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_books"
            android:icon="@drawable/books"
            android:title="@string/books" />
        <item
            android:id="@+id/nav_my_library"
            android:icon="@drawable/my_library"
            android:title="@string/my_library" />
        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/chat"
            android:title="@string/chat" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/friends"
            android:title="@string/friends" />
        <item
            android:id="@+id/nav_goal"
            android:icon="@drawable/goal"
            android:title="@string/goal" />
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/schedule"
            android:title="@string/schedule" />
        <item
            android:id="@+id/nav_statistic"
            android:icon="@drawable/statistic"
            android:title="@string/statistic" />
        <item
            android:id="@+id/nav_quotes"
            android:icon="@drawable/quotes"
            android:title="@string/quotes" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/logout"
            android:title="@string/logout" />
    </group>
</menu>