<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.RegisterActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/rect_background"
        app:cardCornerRadius="40dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/registerLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:text="@string/register"
                android:fontFamily="@font/custom_font"
                android:textColor="#000000"
                android:textSize="24sp" />

            <EditText
                android:id="@+id/registerUsernameET"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="text"
                android:background="@drawable/custom_edittext"/>

            <EditText
                android:id="@+id/registerFirstNameET"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/firts_name"
                android:inputType="text"
                android:background="@drawable/custom_edittext"/>

            <EditText
                android:id="@+id/registerLastNameET"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/last_name"
                android:inputType="text"
                android:background="@drawable/custom_edittext"/>

            <EditText
                android:id="@+id/registerPasswordET"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:background="@drawable/custom_edittext"/>

            <Button
                android:id="@+id/registerB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/round_button"
                android:backgroundTint="#000000"
                android:gravity="center"
                android:onClick="register"
                android:text="@string/register"
                android:textColor="#FFFFFF"
                android:layout_marginBottom="16dp"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.appcompat.widget.LinearLayoutCompat>