<?xml version="1.0" encoding="utf-8"?>
<android.widget.LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ui.LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/rect_background"
        app:cardCornerRadius="40dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            >
            <TextView
                android:id="@+id/loginLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/login"
                android:fontFamily="@font/custom_font"
                android:textSize="24sp"
                android:textColor="#000000"
                />

            <EditText
                android:id="@+id/loginUsernameET"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/custom_edittext"
                android:ellipsize="start"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="text" />

            <EditText
                android:id="@+id/loginPasswordET"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginHorizontal="25dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/custom_edittext"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/loginB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/round_button"
                android:backgroundTint="#000000"
                android:gravity="center"
                android:onClick="onLoginClick"
                android:text="@string/login"
                android:textColor="#FFFFFF"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/loginPasswordET" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</android.widget.LinearLayout>